--- a/frontend/src/style/Auth.scss
+++ b/frontend/src/style/Auth.scss
@@ -1,38 +1,11 @@
-.active {
-    box-shadow: 0px -5px 11px 2px rgba(0, 0, 0, 0.52) inset;
-    -webkit-box-shadow: 0px -5px 11px 2px rgba(0, 0, 0, 0.52) inset;
-    -moz-box-shadow: 0px -5px 11px 2px rgba(0, 0, 0, 0.52) inset;
-
-    transform: translate(-89px, -205px);
-    margin-left: 35px;
-    margin-bottom: 44px;
-    color: white;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 15px;
-    opacity: 1;
-    border-radius: 17px;
-}
-
 .auth {
     display: flex;
-    &__option {
-        transform: translate(-89px, -205px);
+
+    &__title {
+        transform: translate(-19px, -205px);
         margin-left: 35px;
         margin-bottom: 44px;
         color: white;
-        background: rgba(0, 0, 0, 0.5);
-        padding: 15px;
-        box-shadow: 3px -4px 2px 2px rgba(0, 0, 0, 0.62);
-        -webkit-box-shadow: 3px -4px 2px 2px rgba(0, 0, 0, 0.62);
-        -moz-box-shadow: 3px -4px 2px 2px rgba(0, 0, 0, 0.62);
-        opacity: 0.5;
-        border-radius: 17px;
-
-        &:active {
-            box-shadow: 0px -5px 11px 2px rgba(0, 0, 0, 0.52) inset;
-            -webkit-box-shadow: 0px -5px 11px 2px rgba(0, 0, 0, 0.52) inset;
-            -moz-box-shadow: 0px -5px 11px 2px rgba(0, 0, 0, 0.52) inset;
-        }
     }
 
     &__form {
@@ -116,4 +89,22 @@
     left: 0;
     color: #03e9f4;
     font-size: 12px;
+}
+@media all and (min-width: 1008px) {
+    .auth {
+        &__form {
+            width: 600px;
+            height: 500px;
+        }
+
+        &__title {
+            transform: translate(-20px, -270px);
+        }
+
+        &__form {
+            &__input {
+                margin: 57px;
+            }
+        }
+    }
 }
