--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -23,7 +23,7 @@ $clr-bg: #060b23;
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-family: "montserrat";
+    font-family: "Roboto", sans-serif;
 }
 
 body {
