--- a/frontend/src/style/Profile.scss
+++ b/frontend/src/style/Profile.scss
@@ -16,8 +16,14 @@
         height: 513px;
         text-align: center;
 
+        background-color: transparent;
+        border: none;
+        letter-spacing: 3px;
+
         &__img {
             width: 100%;
+            height: 284px;
+            margin-bottom: 25px;
         }
     }
 
@@ -34,6 +40,7 @@
         color: #fff;
         transition: 0.3s;
         width: 150px;
+        transform: translate(1188px, -33px);
 
         &:hover {
             cursor: pointer;
@@ -46,6 +53,13 @@
             border-radius: 30px;
         }
     }
+}
+
+.title {
+    transform: translate(23px, 18px);
+}
+.title-2 {
+    transform: translate(23px, 22px);
 }
 
 .posts__grid {
