--- a/frontend/src/style/Profile.scss
+++ b/frontend/src/style/Profile.scss
@@ -55,6 +55,32 @@
     }
 }
 
+@media all and (max-width: 600px) {
+    .profile {
+        &__btn {
+            transform: translate(119px, 33px);
+        }
+
+        &__post {
+            width: 328px;
+        }
+
+        &__grid {
+            grid-template-columns: none;
+        }
+    }
+
+    .title {
+        transform: translate(13px, 18px);
+        text-align: center;
+    }
+
+    .title-2 {
+        transform: translate(11px, 22px);
+        text-align: center;
+    }
+}
+
 .title {
     transform: translate(23px, 18px);
 }
